--- a/style.css
+++ b/style.css
@@ -1,4 +1,23 @@
-header {
-background-color: blue;
-color: rgb(241, 237, 237);
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.cabecalho {
+    background-color: blue;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 24px 0;
+    font-size: 24px;
+}
+
+.cabecalho-imagem{
+    width: 20%;
+}
+
+.cabecalho-lista-item{
+    display: inline-block;
+    margin: 0 16px;
 }
